--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,20 +3,22 @@ project:
 
 book:
   title: "Mappeeksamen IDR4000"
-  author: "Student Studentson"
-  date: "2023-08-15"
+  author: "Kandudatnummer: 402"
+  date: "17-11-2023"
   chapters:
     - index.qmd
-    - 01-reliability-tools.qmd
-    - 02-regression-models.qmd
-    - 03-statistical-inference.qmd
-    - 04-study-design.qmd
-    - 05-repeated-measurements.qmd
-    - 06-vitenskapsteori.qmd
-    - 07-laboratory-report.qmd
+    - 01-Reliabilitet-reproduserbar-dataanalyse.qmd
+    - 02-Vitenskapsfilosofi.qmd
+    - 04-Studiedesign.qmd
+    - 05-repetertemålinger.qmd
     - references.qmd
 
 bibliography: resources/bib-final.bib
+
+crossref:
+  fig-title: "**Figur**"
+  fig-prefix: "Figur"
+  tbl-title: "Tabell"
 
 format:
   html:
